@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 18-Sep-2010 Jean-Marie Simonet
  #$ [#22462] Module articles Categories - update options. Thanks Bill.
+ # [#22496] Commit 22440 prevents custom position from being entered. Thanks Roland
  
 17-Sep-2010 Jean-Marie Simonet
  # [#22466] Registration failed message when mail function doesn't work. Thanks Roland.
